# home-made-bittorrent

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  torrent_state.db3  vcpkg.json
.github/workflows/: c-cpp.yml  release.yml  run-tests.yml  ubuntu-arm.yml  ubuntu.yml
include/: BitTorrentMessage.cpp  BitTorrentMessage.h  BitTorrentMessage_test.cpp  Block.h  DatabaseService.cpp  DatabaseService.h  DatabaseService_mock.h  DatabaseService_test.cpp  Logger.cpp  Logger.h  Main_test.cpp  PeerConnection.cpp  PeerConnection.h  PeerRetriever.cpp  PeerRetriever.h  Piece.cpp  Piece.h  PieceManager.cpp  PieceManager.h  PieceManager_test.cpp  Piece_Manager.cpp  Piece_Manager.h  Piece_Manager_test.cpp  SharedQueue.h  TorrentClient.cpp  TorrentClient.h  TorrentFileParser.cpp  TorrentFileParser.h  TorrentFileParser_test.cpp  TorrentHandler.cpp  TorrentHandler.h  TorrentHandler_test.cpp  TorrentState.cpp  TorrentState.h  TorrentState_test.cpp  Torrent_Client.cpp  Torrent_Client.h  Torrent_Client_test.cpp  Torrent_Parser.cpp  Torrent_Parser.h  (+12 more)
lib/bencode/: BDictionary.cpp  BInteger.cpp  BItem.cpp  BItemVisitor.cpp  BList.cpp  BString.cpp  Decoder.cpp  Decoder.h  Encoder.cpp  PrettyPrinter.cpp  Utils.cpp
src/: BitTorrentMessage.cpp  BitTorrentMessage.h  BitTorrentMessage_test.cpp  DatabaseService.cpp  DatabaseService.h  DatabaseService_mock.h  DatabaseService_test.cpp  Logger.cpp  Logger.h  PeerConnection.cpp  PeerConnection.h  PeerRetriever.cpp  PeerRetriever.h  Piece.cpp  Piece.h  PieceManager.cpp  PieceManager.h  PieceManager_test.cpp  Queue.h  SharedQueue.h  TorrentClient.cpp  TorrentClient.h  TorrentFileParser.cpp  TorrentFileParser.h  TorrentFileParser_test.cpp  TorrentState.cpp  TorrentState.h  TorrentState_test.cpp  connect.cpp  connect.h  main.cpp  main_test.cpp  utils.cpp  utils.h
src/core/: Block.h  BlockRequestManager.h  PeerRegistry.cpp  PeerRegistry.h  PeerRegistry_test.cpp  Piece.cpp  Piece.h  PieceManager.cpp  PieceManager.h  PieceManager_test.cpp  PiecePicker.cpp  PiecePicker.h  PiecePicker_test.cpp  PieceRepository.cpp  PieceRepository.h  PieceStorage.h  PieceTracker.h  ProgressReporter.h  README.md  TorrentClient.cpp  TorrentClient.h  TorrentState.cpp  TorrentState.h  TorrentState_test.cpp
src/infra/: DatabaseService.cpp  DatabaseService_mock.h  DatabaseService_test.cpp  DiskManager.cpp  DiskManager.h  DiskManager_test.cpp  Logger.cpp  Queue.h
src/network/: BitTorrentMessage.cpp  BitTorrentMessage.h  BitTorrentMessage_test.cpp  PeerConnection.cpp  PeerConnection.h  PeerRetriever.cpp  PeerRetriever.h  connect.cpp  connect.h
src/utils/: TorrentFileParser.cpp  TorrentFileParser.h  TorrentFileParser_test.cpp  utils.cpp  utils.h
